--- a/fun facts for tests/topologiya2.facts.tex
+++ b/fun facts for tests/topologiya2.facts.tex
@@ -210,6 +210,58 @@
     \end{itemize}
 \end{theorem}
 
+\subsection{Базисы и отображения.}
 
+\begin{defn}
+    \textit{Аффинный базис} - набор $n+1$ точке в $X$, пространстве размерности $n$, являющийся аффинно независимым. Или же, это - точке $o\in X$ и базис $e_0, \ldots, e_n$ пространства $\vec{X}$. 
+\end{defn}
+
+\begin{defn}
+    Каждая точка однозначно записывается в виде барицентрической комбинации $\sum_{i=0}^n t_i e_i$, а числа $t_i$ называют \textit{барицентрическими координатами} этой точки.
+\end{defn}
+
+\begin{defn}
+    (Говно-определение). Отображение $F:X\ra Y$ называется \textit{аффинным}, если отображение $\tilde{F}_p$ линейно для некоторой точки $p\in X$. Отображение $\tilde{F}_p:\vec{X}\ra\vec{Y}$ индуцируется из любого отображения $F:X\ra Y$ посредством формулы $\forall v\in \vec{X}$ $\tilde{F}_p(v)=\overrightarrow{F(p)F(q)}$, где $q=p+v$. 
+\end{defn}
+
+\begin{defn}
+    Отображение $\tilde{F}$ называется \textit{линейной частью} аффинного отображения $F$.
+\end{defn}
+
+\begin{defn}
+    (Нормальное определение.) Отображение $F:X\ra Y$ называется \textit{аффинным}, если существует такое линейное $L:\vec{X}\ra\vec{Y}$, что для любых $q, p\in X$, $\overrightarrow{F(p)F(q)}=L(\vec{pq})$. 
+\end{defn}
+
+\begin{theorem}
+    Пусть $x\in X$, $y\in Y$, $L:\vec{X}\ra \vec{Y}$ линейно. Тогда существует единственное аффинное отображение $F:X\ra Y$ такое, что $\tilde{F}=L$ и $F(x)=y$. 
+\end{theorem} \
+
+\begin{lemma}
+    Пусть $p_1, \ldots, p_n$ - аффинно независимые точки в аффинном пространстве $X$, $q_1, \ldots, q_n$ - точки в аффинном пространстве $Y$. Тогда существует такое аффинное отображение $F:X\ra Y$, что $F(p_i)=q_i$ $\forall i$. Кроме того, если $\dim X = n-1$, то такое отображение единственно.
+\end{lemma} \ 
+
+\begin{lemma}
+    Аффинное отображение сохраняет барицентрические комбинации.
+\end{lemma} \ 
+
+\begin{lemma}
+    Композиция аффинных отображений - аффинное отображение. При этом линейная часть композиции - композиция линейных частей.
+\end{lemma}
+
+\begin{stat}
+    Образ и прообраз аффинного подпространства - аффинное подпространство. Образы (прообразы) параллельных подпространств параллельны.
+\end{stat}
+
+\begin{theorem}
+    Параллельный перенос - аффинное отображение, его линейная часть тождественна. Верно также и обратное.
+\end{theorem}
+
+\begin{defn}
+    Аффинное отображение $F:X\ra X$ такое, что $\tilde{F}=k \id$ для некоторого $k \in \RR\backslash \{0, 1\}$, называется \textit{гомотетией}, а $k$ называют \textit{коэффициентом растяжения} гомотетии $F$. Такое отображение имеет ровно одну неподвижную точку, называемую центром.
+\end{defn}
+
+\begin{theorem}
+    (\textit{Основная теорема аффинной геометрии.}) Пусть $X, Y$ - аффинные пространства, $\dim X \geq 2$. Пусть $F: X\ra Y$ - инъективное отображение, и для любой прямой $l\subset X$ её образ $F(l)$ - тоже прямая. Тогда $F$ - аффинное отображение.
+\end{theorem}
 
 \end{document}
