--- a/fun facts for tests/topologiya2.facts.tex
+++ b/fun facts for tests/topologiya2.facts.tex
@@ -115,13 +115,13 @@
 \subsection{Начальные определения и свойства.}
 
 \begin{defn}
-    \textit{Аффинное пространство} - тройка $(X, \vec{X}, +)$, состоящая из непустого множества \textit{точек}, векторного пространства над $\RR$ (\textit{присоединённое}) и операцией $+:X\times \vec{X}\ra X$ \textit{откладывания вектора}. \ 
+    \textit{\textcolor{magenta}{\hypertarget{s1}{Аффинное пространство}}} - тройка $(X, \vec{X}, +)$, состоящая из непустого множества \textit{\textcolor{magenta}{\hypertarget{s2}{точек}}}, векторного пространства над $\RR$ (\textit{\textcolor{magenta}{\hypertarget{s3}{присоединённое}}}) и операцией $+:X\times \vec{X}\ra X$ \textit{\textcolor{magenta}{\hypertarget{s4}{откладывания вектора}}}. \ 
 
     Налагаемые условия - для любых точек $x, y\in X$ существует единственный вектор $v\in \vec{X}$ такой, что $x+v=y$ ($\vec{xy}$), а также ассоциативность откладывания вектора.
 \end{defn}
 
 \begin{defn}
-    \textit{Начало отсчёта} аффинного пространства - произвольная фиксированная точка $o\in X$. 
+    \textit{\textcolor{magenta}{\hypertarget{s5}{Начало отсчёта}}} аффинного пространства - произвольная фиксированная точка $o\in X$. 
 \end{defn}
 
 \begin{lemma}
@@ -129,11 +129,11 @@
     \[
         \varphi_o(x)=\vec{ox} \: \forall x \in X. 
     \]
-    Такая биекция называется \textit{векторизацией} аффинного пространства.
+    Такая биекция называется \textit{\textcolor{magenta}{\hypertarget{s6}{векторизацией}}} аффинного пространства.
 \end{lemma}
 
 \begin{defn}
-    \textit{Линейная комбинация} $\sum t_i p_i$ точек с коэффициентами относительно начала отсчёта $o\in X$ - вектор $v = \sum t_i \vec{op_i}$, или точка $p=o+v$. Комбинация называется \textit{барицентрической}, если сумма коэффициентов равна единице, и \textit{сбалансированной}, если сумма коэффициентов равна нулю.
+    \textit{\textcolor{magenta}{\hypertarget{s7}{Линейная комбинация}}} $\sum t_i p_i$ точек с коэффициентами относительно начала отсчёта $o\in X$ - вектор $v = \sum t_i \vec{op_i}$, или точка $p=o+v$. Комбинация называется \textit{\textcolor{magenta}{\hypertarget{s8}{барицентрической}}}, если сумма коэффициентов равна единице, и \textit{\textcolor{magenta}{\hypertarget{s9}{сбалансированной}}}, если сумма коэффициентов равна нулю.
 \end{defn}
 
 \begin{theorem}
@@ -143,11 +143,11 @@
 \subsection{Материальные точки.}
 
 \begin{defn}
-    Пусть $x$ — некоторая точка аффинного пространства и $m$ — ненулевое число. \textit{Материальной точкой} $(x,m)$ называется пара: точка $x$ с вещественным числом $m$, причем число m называется \textit{массой} материальной точки $(x,m)$, а точка $x$ — носителем этой материальной точки.
+    Пусть $x$ — некоторая точка аффинного пространства и $m$ — ненулевое число. \textit{\textcolor{magenta}{\hypertarget{s10}{Материальной точкой}}} $(x,m)$ называется пара: точка $x$ с вещественным числом $m$, причем число m называется \textit{\textcolor{magenta}{\hypertarget{s11}{массой}}} материальной точки $(x,m)$, а точка $x$ — носителем этой материальной точки.
 \end{defn}
 
 \begin{defn}
-    \textit{Центром масс} системы материальных точек $(x_i, m_i)$ называется такая точка $z$ (притом единственная), для которой имеет место равенство
+    \textit{\textcolor{magenta}{\hypertarget{s12}{Центром масс}}} системы материальных точек $(x_i, m_i)$ называется такая точка $z$ (притом единственная), для которой имеет место равенство
     \[
         m_1 \cdot \vec{zx_1} + \ldots + m_n \cdot \vec{zx_n} = 0. 
     \]
@@ -156,23 +156,23 @@
 \subsection{Аффинные подпространства и оболочки.}
 
 \begin{defn}
-    Множество $Y\subset X$ - \textit{аффинное подпространство}, если существуют такие линейное подпространство $V\subset \vec{X}$ и точка $p\in Y$, что $Y=p+V$. $V$ называется\textit{направлением} $Y$. Определение подпространства не зависит от выбора точки в нём.
+    Множество $Y\subset X$ - \textit{\textcolor{magenta}{\hypertarget{s13}{аффинное подпространство}}}, если существуют такие линейное подпространство $V\subset \vec{X}$ и точка $p\in Y$, что $Y=p+V$. $V$ называется\textit{\textcolor{magenta}{\hypertarget{s14}{направлением}}} $Y$. Определение подпространства не зависит от выбора точки в нём.
 \end{defn}
 
 \begin{defn}
-    \textit{Размерность} $\dim X$ афинного пространства есть размерность его присоединённого векторного пространства.
+    \textit{\textcolor{magenta}{\hypertarget{s15}{Размерность}}} $\dim X$ афинного пространства есть размерность его присоединённого векторного пространства.
 \end{defn}
 
 \begin{defn}
-    \textit{Параллельный перенос} на вектор $v\in \vec{X}$ - отображение $T_v:X\ra X$, заданное равенством $T_v(x)=x+v$. 
+    \textit{\textcolor{magenta}{\hypertarget{s16}{Параллельный перенос}}} на вектор $v\in \vec{X}$ - отображение $T_v:X\ra X$, заданное равенством $T_v(x)=x+v$. 
 \end{defn}
 
 \begin{defn}
-    Аффинные подпространства одинаковой размерности \textit{параллельны}, если их направления совпадают.
+    Аффинные подпространства одинаковой размерности \textit{\textcolor{magenta}{\hypertarget{s17}{параллельны}}}, если их направления совпадают.
 \end{defn}
 
 \begin{defn}
-    \textit{Прямая} - аффинное подпространство размерности 1, \textit{гиперплоскость} в $X$ - аффинное подпространство размерности $\sim X - 1$. 
+    \textit{\textcolor{magenta}{\hypertarget{s18}{Прямая}}} - аффинное подпространство размерности 1, \textit{\textcolor{magenta}{\hypertarget{s19}{гиперплоскость}}} в $X$ - аффинное подпространство размерности $\sim X - 1$. 
 \end{defn}
 
 \begin{stat}
@@ -180,7 +180,7 @@
 \end{stat}
 
 \begin{defn}
-    \textit{Суммой аффинных подпространств} называется наименьшее аффинное подпространство, их содержащее.
+    \textit{\textcolor{magenta}{\hypertarget{s20}{Суммой аффинных подпространств}}} называется наименьшее аффинное подпространство, их содержащее.
 \end{defn}
 
 \begin{theorem}
@@ -188,7 +188,7 @@
 \end{theorem}
 
 \begin{defn}
-    \textit{Аффинная оболочка} $\Aff{A}$ непустого множества $A\subset X$ - пересечение всех аффинных подпространств, содержащих $A$. Как следствие, это - наименьшее аффинное подпространство, содержащее $A$. 
+    \textit{\textcolor{magenta}{\hypertarget{s21}{Аффинная оболочка}}} $\Aff{A}$ непустого множества $A\subset X$ - пересечение всех аффинных подпространств, содержащих $A$. Как следствие, это - наименьшее аффинное подпространство, содержащее $A$. 
 \end{defn}
 
 \begin{theorem}
@@ -196,7 +196,7 @@
 \end{theorem}
 
 \begin{defn}
-    Точки $p_1, \ldots, p_k$ \textit{аффинно зависимы}, если существуют такие коэффициенты $t_i \in \RR$, не все равные нулю, что $\sum t_i = 0$ и $\sum t_ip_i = 0$. Если такой комбинации нет, то точки \textit{аффинно независимы}.
+    Точки $p_1, \ldots, p_k$ \textit{\textcolor{magenta}{\hypertarget{s22}{аффинно зависимы}}}, если существуют такие коэффициенты $t_i \in \RR$, не все равные нулю, что $\sum t_i = 0$ и $\sum t_ip_i = 0$. Если такой комбинации нет, то точки \textit{\textcolor{magenta}{\hypertarget{s23}{аффинно независимы}}}.
 \end{defn}
 
 \begin{theorem}
@@ -213,23 +213,23 @@
 \subsection{Базисы и отображения.}
 
 \begin{defn}
-    \textit{Аффинный базис} - набор $n+1$ точке в $X$, пространстве размерности $n$, являющийся аффинно независимым. Или же, это - точке $o\in X$ и базис $e_0, \ldots, e_n$ пространства $\vec{X}$. 
+    \textit{\textcolor{magenta}{\hypertarget{s24}{Аффинный базис}}} - набор $n+1$ точке в $X$, пространстве размерности $n$, являющийся аффинно независимым. Или же, это - точке $o\in X$ и базис $e_0, \ldots, e_n$ пространства $\vec{X}$. 
 \end{defn}
 
 \begin{defn}
-    Каждая точка однозначно записывается в виде барицентрической комбинации $\sum_{i=0}^n t_i e_i$, а числа $t_i$ называют \textit{барицентрическими координатами} этой точки.
+    Каждая точка однозначно записывается в виде барицентрической комбинации $\sum_{i=0}^n t_i e_i$, а числа $t_i$ называют \textit{\textcolor{magenta}{\hypertarget{s25}{барицентрическими координатами}}} этой точки.
 \end{defn}
 
 \begin{defn}
-    (Говно-определение). Отображение $F:X\ra Y$ называется \textit{аффинным}, если отображение $\tilde{F}_p$ линейно для некоторой точки $p\in X$. Отображение $\tilde{F}_p:\vec{X}\ra\vec{Y}$ индуцируется из любого отображения $F:X\ra Y$ посредством формулы $\forall v\in \vec{X}$ $\tilde{F}_p(v)=\overrightarrow{F(p)F(q)}$, где $q=p+v$. 
+    (Говно-определение). Отображение $F:X\ra Y$ называется \textit{\textcolor{magenta}{\hypertarget{s26}{аффинным}}}, если отображение $\tilde{F}_p$ линейно для некоторой точки $p\in X$. Отображение $\tilde{F}_p:\vec{X}\ra\vec{Y}$ индуцируется из любого отображения $F:X\ra Y$ посредством формулы $\forall v\in \vec{X}$ $\tilde{F}_p(v)=\overrightarrow{F(p)F(q)}$, где $q=p+v$. 
 \end{defn}
 
 \begin{defn}
-    Отображение $\tilde{F}$ называется \textit{линейной частью} аффинного отображения $F$.
+    Отображение $\tilde{F}$ называется \textit{\textcolor{magenta}{\hypertarget{s27}{линейной частью}}} аффинного отображения $F$.
 \end{defn}
 
 \begin{defn}
-    (Нормальное определение.) Отображение $F:X\ra Y$ называется \textit{аффинным}, если существует такое линейное $L:\vec{X}\ra\vec{Y}$, что для любых $q, p\in X$, $\overrightarrow{F(p)F(q)}=L(\vec{pq})$. 
+    (Нормальное определение.) Отображение $F:X\ra Y$ называется \textit{\textcolor{magenta}{\hypertarget{s28}{аффинным}}}, если существует такое линейное $L:\vec{X}\ra\vec{Y}$, что для любых $q, p\in X$, $\overrightarrow{F(p)F(q)}=L(\vec{pq})$. 
 \end{defn}
 
 \begin{theorem}
@@ -257,11 +257,158 @@
 \end{theorem}
 
 \begin{defn}
-    Аффинное отображение $F:X\ra X$ такое, что $\tilde{F}=k \id$ для некоторого $k \in \RR\backslash \{0, 1\}$, называется \textit{гомотетией}, а $k$ называют \textit{коэффициентом растяжения} гомотетии $F$. Такое отображение имеет ровно одну неподвижную точку, называемую центром.
+    Аффинное отображение $F:X\ra X$ такое, что $\tilde{F}=k \id$ для некоторого $k \in \RR\backslash \{0, 1\}$, называется \textit{\textcolor{magenta}{\hypertarget{s29}{гомотетией}}}, а $k$ называют \textit{\textcolor{magenta}{\hypertarget{s30}{коэффициентом растяжения}}} гомотетии $F$. Такое отображение имеет ровно одну неподвижную точку, называемую центром.
 \end{defn}
 
 \begin{theorem}
-    (\textit{Основная теорема аффинной геометрии.}) Пусть $X, Y$ - аффинные пространства, $\dim X \geq 2$. Пусть $F: X\ra Y$ - инъективное отображение, и для любой прямой $l\subset X$ её образ $F(l)$ - тоже прямая. Тогда $F$ - аффинное отображение.
+    (\textit{\textcolor{magenta}{\hypertarget{s31}{Основная теорема аффинной геометрии.}}}) Пусть $X, Y$ - аффинные пространства, $\dim X \geq 2$. Пусть $F: X\ra Y$ - инъективное отображение, и для любой прямой $l\subset X$ её образ $F(l)$ - тоже прямая. Тогда $F$ - аффинное отображение.
 \end{theorem}
+
+\section{Проективные пространства.}
+
+\subsection{Начальные определения и свойства.}
+
+\begin{defn}
+    Пусть $V$ - векторное пространство над полем $K$. На множестве $V \backslash \{0\}$ введём отношение эквивалентности
+    \[
+        x \sim y \Llra \exists \lambda \in K: x = \lambda y. 
+    \]
+    Тогда фактор $V$ по этому отношению называют \textit{\textcolor{magenta}{\hypertarget{s32}{проективным пространством}}} ($\PP(V)$), порождённым векторным $V$. Само отображение из векторного пространства в соответствующее проективное называют \textit{\textcolor{magenta}{\hypertarget{s33}{проективизацией}}}.
+\end{defn}
+
+\begin{remark}
+    \textit{\textcolor{magenta}{\hypertarget{s34}{Размерность}}} $\PP(V)$ по определению равна $\dim V -1$. 
+\end{remark}
+
+\begin{theorem}
+    Пусть $Y, Z\subset X$ - подпространства, $\dim Y + \dim Z \geq \dim X$, тогда
+
+    \begin{itemize}
+        \item $Y\cap Z \neq \emptyset$; 
+        \item $Y \cap Z$ - подпространство; 
+        \item $\dim(Y \cap Z)\geq \dim Y + \dim Z - \dim X$. 
+    \end{itemize}
+\end{theorem}
+
+\begin{defn}
+    Пусть $W$ - непустое векторное подпространство $V$. Тогда $\PP(W)$ называется \textit{\textcolor{magenta}{\hypertarget{s35}{проективным подпространством}}} $\PP(V)$.
+\end{defn}
+
+\begin{defn}
+    Пусть $X=\PP(V)$ - проективное пространство размерности $n$. Числа $x_0, x_1, \ldots, x_n$, являющиеся координатами вектора $v$, порождающего $p\in \PP(V)$, называются \textit{\textcolor{magenta}{\hypertarget{s36}{однородными координатами}}}.
+\end{defn}
+
+\begin{defn}
+    $\hat{X}=\PP(V)$ - \textit{\textcolor{magenta}{\hypertarget{s37}{проективное пополнение}}} аффинного пространства $X$, а множество $X_\infty = \PP(\vec{X}\times 0)\subset \hat{X}$ - \textit{\textcolor{magenta}{\hypertarget{s38}{бесконечно удалённые точки}}}. Также, множество этих точек есть гиперплоскость в $\hat{X}$, которая называется \textit{\textcolor{magenta}{\hypertarget{s39}{бесконечно удалённой гиперплоскостью}}}.
+\end{defn}
+
+\begin{defn}
+    Пусть $V$ - векторное пространство, $W\subset V$ - линейная гиперплоскость, $X$ - гиперплоскость ей пареллельная. Тогда биекцию $\PP(V) \backslash \PP(W) \ra X$ называют \textit{\textcolor{magenta}{\hypertarget{s40}{картой}}} пространства $\PP(V)$.
+\end{defn}
+
+\begin{defn}
+    Пусть на $\RR p^1$ (прямая с бесконечно удалённой точкой) выбрана аффинная система координат, в которой $A=a$, $B=b$, $C=c$ и $D=d$. Определим \textit{\textcolor{magenta}{\hypertarget{s41}{двойное отношение}}} четвёрки точек $(A, B, C, D)$ формулой
+    \[
+        [A, B, C, D]=\frac{a-c}{a-d}\cdot \frac{b-c}{b-d}.
+    \]
+\end{defn}
+
+\begin{stat}
+    Данное определение инвариантно относительно выбора карты, а само отношение сохраняется при проективных преобразованиях.
+\end{stat}
+
+\newpage
+
+\section{Указатель.}
+
+\hypertarget{t2}{Он самый.}
+
+\begin{multicols}{2}
+
+    \hyperlink{s24}{аффинный базис} \ 
+
+    \hyperlink{s22}{аффинная зависимость} \ 
+    
+    \hyperlink{s23}{аффинная независимость} \ 
+    
+    \hyperlink{s21}{аффинная оболочка} \ 
+    
+    \hyperlink{s26}{аффинное отображение(1)} \ 
+    
+    \hyperlink{s28}{аффинное отображение(2)} \ 
+    
+    \hyperlink{s13}{аффинное подпространство} \ 
+    
+    \hyperlink{s1}{аффинное пространство} \
+    
+    \hyperlink{s8}{барицентрическая лк} \
+    
+    \hyperlink{s25}{барицентрические координаты} \ 
+    
+    \hyperlink{s38}{бесконечно удалённые точки} \ 
+
+    \hyperlink{s39}{бесконечно удалённая гп} \
+    
+    \hyperlink{s6}{векторизация (ап)} \ 
+    
+    \hyperlink{s19}{гиперплоскость} \ 
+    
+    \hyperlink{s29}{гомотетия} \ 
+
+    \hyperlink{s41}{двойное отношение} \
+
+    \hyperlink{s40}{карта} \
+    
+    \hyperlink{s30}{коэффициент растяжения} \ 
+    
+    \hyperlink{s7}{линейная комбинация} \ 
+    
+    \hyperlink{s27}{линейная часть (ао)} \ 
+    
+    \hyperlink{s11}{масса} \ 
+    
+    \hyperlink{s10}{материальная точка} \ 
+    
+    \hyperlink{s14}{направление афинного п/п} \ 
+    
+    \hyperlink{s5}{начало отсчёта (ап)} \ 
+    
+    \hyperlink{s36}{однородные координаты} \ 
+    
+    \hyperlink{s31}{основная теорема аг} \ 
+    
+    \hyperlink{s4}{откладывание вектора} \ 
+    
+    \hyperlink{s17}{параллельные (ап/п)} \ 
+    
+    \hyperlink{s16}{параллельный перенос} \ 
+    
+    \hyperlink{s3}{присоединённое (вп)} \ 
+    
+    \hyperlink{s33}{проективизация} \ 
+    
+    \hyperlink{s35}{проективное подпространство} \ 
+    
+    \hyperlink{s37}{проективное пополнение} \ 
+    
+    \hyperlink{s32}{проективное пространство} \ 
+    
+    \hyperlink{s18}{прямая} \ 
+    
+    \hyperlink{s15}{размерность (ап)} \ 
+    
+    \hyperlink{s34}{размерность (пп)} \ 
+    
+    \hyperlink{s9}{сбалансированная лк} \ 
+    
+    \hyperlink{s20}{сумма (ап/п)} \ 
+    
+    \hyperlink{s2}{точка} \ 
+    
+    \hyperlink{s12}{центр масс} \ 
+
+\end{multicols}
+
+
 
 \end{document}
